Separate DefaultConversionRegistry from ConversionLookup.